// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Get status info returns correct response with empty non obfuscated variable 1`] = `
{
  "envInfo": [
    {
      "envVarName": "fpjs_get_result_path",
      "isInternal": false,
      "isSet": true,
      "resolvedBy": "test provider",
      "value": "result",
    },
    {
      "envVarName": "fpjs_pre_shared_secret",
      "isInternal": false,
      "isSet": true,
      "resolvedBy": "test provider",
      "value": "********",
    },
    {
      "envVarName": "fpjs_agent_download_path",
      "isInternal": false,
      "isSet": true,
      "resolvedBy": "test provider",
      "value": "download",
    },
    {
      "envVarName": "fpjs_cdn_url",
      "isInternal": true,
      "isSet": true,
      "resolvedBy": "test provider",
      "value": "fpcdn.io",
    },
    {
      "envVarName": "fpjs_ingress_base_host",
      "isInternal": true,
      "isSet": true,
      "resolvedBy": "test provider",
      "value": "api.fpjs.io",
    },
  ],
  "styleNonce": "hardcodedStyleNonce",
  "version": "__lambda_func_version__",
}
`;

exports[`Get status info returns correct response with empty pre shared secret 1`] = `
{
  "envInfo": [
    {
      "envVarName": "fpjs_get_result_path",
      "isInternal": false,
      "isSet": true,
      "resolvedBy": "test provider",
      "value": "result",
    },
    {
      "envVarName": "fpjs_pre_shared_secret",
      "isInternal": false,
      "isSet": false,
      "resolvedBy": null,
      "value": null,
    },
    {
      "envVarName": "fpjs_agent_download_path",
      "isInternal": false,
      "isSet": true,
      "resolvedBy": "test provider",
      "value": "download",
    },
    {
      "envVarName": "fpjs_cdn_url",
      "isInternal": true,
      "isSet": true,
      "resolvedBy": "test provider",
      "value": "fpcdn.io",
    },
    {
      "envVarName": "fpjs_ingress_base_host",
      "isInternal": true,
      "isSet": true,
      "resolvedBy": "test provider",
      "value": "api.fpjs.io",
    },
  ],
  "styleNonce": "hardcodedStyleNonce",
  "version": "__lambda_func_version__",
}
`;

exports[`Get status info returns correct status info 1`] = `
{
  "envInfo": [
    {
      "envVarName": "fpjs_get_result_path",
      "isInternal": false,
      "isSet": true,
      "resolvedBy": "test provider",
      "value": "result",
    },
    {
      "envVarName": "fpjs_pre_shared_secret",
      "isInternal": false,
      "isSet": true,
      "resolvedBy": "test provider",
      "value": "********",
    },
    {
      "envVarName": "fpjs_agent_download_path",
      "isInternal": false,
      "isSet": true,
      "resolvedBy": "test provider",
      "value": "download",
    },
    {
      "envVarName": "fpjs_cdn_url",
      "isInternal": true,
      "isSet": true,
      "resolvedBy": "test provider",
      "value": "fpcdn.io",
    },
    {
      "envVarName": "fpjs_ingress_base_host",
      "isInternal": true,
      "isSet": true,
      "resolvedBy": "test provider",
      "value": "api.fpjs.io",
    },
  ],
  "styleNonce": "hardcodedStyleNonce",
  "version": "__lambda_func_version__",
}
`;

exports[`Handle status returns correct status info in html if all variables are set 1`] = `
"<html lang="en-US">
      <head>
        <title>CloudFront integration status</title>
        <meta charset="utf-8">
        <style nonce='hardcodedStyleNonce'>
          body, .env-info {
            display: flex;
          }
          
          body {
            flex-direction: column;
            align-items: center;
          }
          
          body > * {
            margin-bottom: 1em;
          }
        </style>
      </head>
      <body>
        <h1>CloudFront integration status</h1>
        <div>
          Lambda function version: __lambda_func_version__
        </div>
        
      <div>
        ✅ All environment variables are set
      </div>
    
          <span>
            Please reach out our support via <a href="mailto:support@fingerprint.com">support@fingerprint.com</a> if you have any issues
          </span>
      </body>
    </html>"
`;

exports[`Handle status returns correct status info in html if some variables are missing 1`] = `
"<html lang="en-US">
      <head>
        <title>CloudFront integration status</title>
        <meta charset="utf-8">
        <style nonce='hardcodedStyleNonce'>
          body, .env-info {
            display: flex;
          }
          
          body {
            flex-direction: column;
            align-items: center;
          }
          
          body > * {
            margin-bottom: 1em;
          }
        </style>
      </head>
      <body>
        <h1>CloudFront integration status</h1>
        <div>
          Lambda function version: __lambda_func_version__
        </div>
        
    <div class="env-info">
      
        <div class="env-info-item">
            ⚠️ <strong>fpjs_pre_shared_secret </strong> is not defined
        </div>
    </div>
  
          <span>
            Please reach out our support via <a href="mailto:support@fingerprint.com">support@fingerprint.com</a> if you have any issues
          </span>
      </body>
    </html>"
`;

exports[`Handle status returns correct status info in html if some variables are using default values 1`] = `
"<html lang="en-US">
      <head>
        <title>CloudFront integration status</title>
        <meta charset="utf-8">
        <style nonce='hardcodedStyleNonce'>
          body, .env-info {
            display: flex;
          }
          
          body {
            flex-direction: column;
            align-items: center;
          }
          
          body > * {
            margin-bottom: 1em;
          }
        </style>
      </head>
      <body>
        <h1>CloudFront integration status</h1>
        <div>
          Lambda function version: __lambda_func_version__
        </div>
        
    <div class="env-info">
      
        <div class="env-info-item">
            ⚠️ <strong>fpjs_get_result_path </strong> is not defined and uses default value
        </div>
        <div class="env-info-item">
            ⚠️ <strong>fpjs_pre_shared_secret </strong> is not defined
        </div>
        <div class="env-info-item">
            ⚠️ <strong>fpjs_agent_download_path </strong> is not defined and uses default value
        </div>
    </div>
  
          <span>
            Please reach out our support via <a href="mailto:support@fingerprint.com">support@fingerprint.com</a> if you have any issues
          </span>
      </body>
    </html>"
`;
